--- a/Thymeleaf/Thymeleaf/src/main/resources/templates/main.html
+++ b/Thymeleaf/Thymeleaf/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>product List</title>
@@ -10,13 +10,27 @@
     #productTable td, #productTable th {border: 1px solid black; padding: 18px;}
     #productTable thead th {text-align: left}
     #productTable td {width: 100px;}
+    button {border: 2px solid red; border-radius: 20%; margin-right: 10px; background: red; padding: 5px; font-weight: bold; font-size: large; color: white;}
 </style>
+<script>
+    function getProductDetail(productSeq) {
+        alert(productSeq)
+    }
+
+</script>
 <body>
 
     <div class="outerWrap">
         <table id="productTable">
+            <colgroup>
+                <col width="20px"></col>
+                <col width="20px"></col>
+                <col width="200px"></col>
+                <col width="100px"></col>
+            </colgroup>
             <thead>
                 <tr>
+                    <th></th>
                     <th>순번</th>
                     <th>상품명</th>
                     <th>가격</th>
@@ -24,15 +38,29 @@
             </thead>
             <tbody>
                 <tr th:each="product, stat : ${productList}">
+                    <td style="text-align: center">
+                        <input type="checkbox" />
+                    </td>
                     <td th:text="${stat.index+1}"></td>
                     <td>
-                        <a th:text="${product.productName}"
-                           th:href="@{/product/detail/{productSeq}(productSeq = ${product.productSeq})}">
-                        </a>
+                        <!--<span th:text="${product.productName}" th:onclick="'getProductDetail(' + ${product.productSeq} + ')"></span>-->
+                        <span style="cursor: pointer; text-underline: red"
+                              th:id="${product.productSeq}"
+                              th:text="${product.productName}"
+                              th:onclick="getProductDetail(this.getAttribute('id'))"></span>
                     </td>
                     <td th:text="${product.productPrice}"></td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4" style="text-align: right">
+                        <!--<button th:onclick="'location.href=\'' + @{/product/add} + '\''">등록</button>-->
+                        <button th:onclick="|location.href='@{/product/add}'|">등록</button>
+                        <button>삭제</button>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
     </div>
 
