--- a/Thymeleaf/Thymeleaf/src/main/resources/templates/product/addProduct.html
+++ b/Thymeleaf/Thymeleaf/src/main/resources/templates/product/addProduct.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <title>Add Product</title>
 </head>
+<style>
+    body {position: absolute}
+    .outerWrap {position: relative; top: 200px; left: 50%;}
+    input { width: 400px; height: 40px; border: 2px solid black; margin-top: 20px; padding: 10px; font-size: 16px;}
+    textarea { width: 400px; height: 100px; border: 2px solid black; margin-top: 20px; padding: 10px; font-size: 10px;}
+    h2 {text-align: center}
+</style>
 <body>
 
-    <div>
-        <span>Hello World</span>
+    <div class="outerWrap">
+        <h2>상품 등록 페이지</h2>
+        <form ction="">
+            <span>제목 : </span>
+            <input type="text" name="name" /><br/>
+            <span>가격 : </span>
+            <input type="text" name="price" /><br/>
+            <span>설명 : </span>
+            <textarea name="desc" ></textarea>
+        </form>
     </div>
 
 
