--- a/Thymeleaf/Thymeleaf/src/main/resources/templates/test.html
+++ b/Thymeleaf/Thymeleaf/src/main/resources/templates/test.html
@@ -16,7 +16,7 @@
 
     <div class="outerWrap">
         <h2>상품 등록 페이지</h2>
-        <form th:action="@{/product/add}" th:object="${productDto}" method="post">
+        <form th:action="@{/product/add}" th:object="${ProductDto}" method="post">
             <span>제목 : </span>
             <input type="text" th:field="*{productName}" /><br/>
             <span>가격 : </span>
