--- a/Thymeleaf/Thymeleaf/src/main/resources/templates/main.html
+++ b/Thymeleaf/Thymeleaf/src/main/resources/templates/main.html
@@ -12,18 +12,19 @@
     #productTable td {width: 100px;}
     button {border: 2px solid red; border-radius: 20%; margin-right: 10px; background: red; padding: 5px; font-weight: bold; font-size: large; color: white;}
 </style>
-<script>
-
+<script th:inline="javascript">
+    let a = [[${result}]];
+    console.log([[${result}]])
 </script>
 <body>
 
     <div class="outerWrap">
         <table id="productTable">
             <colgroup>
-                <col width="20px"></col>
-                <col width="20px"></col>
-                <col width="200px"></col>
-                <col width="100px"></col>
+                <col width="20px" />
+                <col width="20px" />
+                <col width="200px" />
+                <col width="100px" />
             </colgroup>
             <thead>
                 <tr>
