login 여부에 따른 product action 처리

--- a/Thymeleaf/Thymeleaf/src/main/resources/templates/header.html
+++ b/Thymeleaf/Thymeleaf/src/main/resources/templates/header.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <header th:fragment="commonHeader">
-    <header>
+    <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    </header>
+    </head>
     <style>
         .headerWrap {margin-top: 50px; margin-right: 20%; text-align: right; width: 150%}
         .headerWrap button {border: none; border-radius: 10%; margin-right: 10px; padding: 3px; font-weight: normal; font-size: small; color: white;}
